# lab_boys

./: .gitignore  .gitmodules  README.md  frames_2026-04-13_10.01.35.gv  frames_2026-04-13_10.11.57.gv  frames_2026-04-14_15.24.15.gv  frames_2026-04-16_14.36.47.gv  frames_2026-04-16_14.47.12.gv  frames_2026-04-16_15.49.40.gv  frames_2026-04-17_09.46.17.gv  frames_2026-04-17_09.54.16.gv  frames_2026-04-17_13.15.09.gv  frames_2026-04-21_10.19.04.gv  frames_2026-04-21_10.36.17.gv  frames_2026-04-21_10.36.25.gv  frames_2026-04-21_10.37.14.gv  frames_2026-04-21_10.42.33.gv  frames_2026-04-21_10.43.20.gv  frames_2026-04-21_12.03.07.gv  frames_2026-04-23_09.35.02.gv  frames_2026-04-23_09.44.02.gv  problems.txt
install/: local_setup.sh  setup.sh
install/lab_base/share/lab_base/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lab_base/share/lab_base/cmake/: lab_baseConfig.cmake
rosbag/: PO2 test sim
rosbag/exp3 (1)/: metadata.yaml
rosbag/exp3 (2)/: metadata.yaml
rosbag/exp3 (3)/: metadata.yaml
rosbag/exp3 (4)/: metadata.yaml
rosbag/exp3 (5)/: metadata.yaml
rosbag/exp4 (1)/: metadata.yaml
rosbag/exp4 (2)/: metadata.yaml
rosbag/exp4 (3)/: metadata.yaml
rosbag/exp4 (4)/: metadata.yaml
rosbag/exp4 (5)/: metadata.yaml
rosbag/rosbag 3-9 (1)/: rosbag2_2026_05_21-17_04_41_0.mcap
rosbag/rosbag 3-9 (2)/: metadata.yaml  rosbag2_2026_05_21-17_06_51_0.mcap
rosbag/rosbag 3-9 (3)/: metadata.yaml  rosbag2_2026_05_21-17_09_01_0.mcap
rosbag/rosbag 3-9 (4)/: metadata.yaml  rosbag2_2026_05_21-17_11_15_0.mcap
rosbag/rosbag 3-9 (5)/: metadata.yaml  rosbag2_2026_05_21-17_14_26_0.mcap
rosbag/rosbag 5-6 (1)/: metadata.yaml  rosbag2_2026_05_21-17_16_23_0.mcap
rosbag/rosbag 5-6 (2)/: metadata.yaml  rosbag2_2026_05_21-17_18_48_0.mcap
rosbag/rosbag 5-6 (3)/: metadata.yaml  rosbag2_2026_05_21-17_21_47_0.mcap
rosbag/rosbag 5-6 (4)/: metadata.yaml  rosbag2_2026_05_21-17_24_20_0.mcap
rosbag/rosbag 5-6 (5)/: metadata.yaml  rosbag2_2026_05_21-17_26_58_0.mcap
rosbag/rosbag2_2026_05_21-10_21_43/: metadata.yaml  rosbag2_2026_05_21-10_21_43_0.mcap
rosbag/rosbag2_2026_05_22-15_05_31/: metadata.yaml  rosbag2_2026_05_22-15_05_31_0.mcap
rosbag/rosbag2_2026_05_22-15_07_37/: metadata.yaml  rosbag2_2026_05_22-15_07_37_0.mcap
rosbag/rosbag2_2026_05_22-15_09_45/: metadata.yaml  rosbag2_2026_05_22-15_09_45_0.mcap
rosbag/rosbag2_2026_05_22-15_11_51/: metadata.yaml  rosbag2_2026_05_22-15_11_51_0.mcap
rosbag/rosbag2_2026_05_22-15_14_05/: metadata.yaml  rosbag2_2026_05_22-15_14_05_0.mcap
rosbag/rosbag2_2026_05_22-15_15_45/: metadata.yaml  rosbag2_2026_05_22-15_15_45_0.mcap
rosbag2_2026_05_20-15_14_24/: metadata.yaml  rosbag2_2026_05_20-15_14_24_0.mcap
rosbag2_2026_05_20-15_45_06/: metadata.yaml  rosbag2_2026_05_20-15_45_06_0.mcap
setup/: setup.sh
src/aruco_sensor/: package.xml  setup.cfg  setup.py
src/claus/: CMakeLists.txt  package.xml
src/control/: CMakeLists.txt  package.xml
src/control/config/: claus_setup.yaml  claus_setup_sim.yaml  claus_slamParam.yaml  claus_slamParam_sim.yaml  empty_map.yaml  mapper_params_online_async.yaml  nav2_params.yaml  nav2_params_real.yaml  setup_sim.yaml
src/control/include/: controller.h  state_manager.h  transformation.h
src/control/src/: controller.cpp  main.cpp  path_planner.cpp  state_manager.cpp  transformation.cpp
src/gazebo/: CMakeLists.txt  package.xml
src/hello_moveit/: package.xml
src/lab_base/: CMakeLists.txt  package.xml
src/lab_base/config/: empty_map.yaml  keepout_map.pgm  keepout_map.yaml  keepout_map2.pgm  nav2_params.yaml  setup_sim.yaml
src/lab_base/include/: controller.h  state_manager.h  transformation.h
src/lab_base/src/: controller.cpp  main.cpp  state_manager.cpp  transformation.cpp
src/lab_manipulator/: CMakeLists.txt
src/lab_manipulator/conifg/: manipulator_params.yaml
src/lab_manipulator/launch/: display.launch.py  gazebo.launch.py
src/lab_manipulator/src/: main.cpp
src/lab_manipulator/urdf/: a200_wrapper.xacro  accessories.urdf.xacro  my_robot.urdf  r100_wrapper.xacro
src/lab_manipulator/worlds/: chassis_world.sdf  my_costmap.pgm  my_costmap.yaml  my_map.pgm  old_robot_sdf  world.sdf
(+251 files in other folders)
