<?xml version="1.0"?>
<package format="3">
  <name>lab_base</name>
  <version>0.0.1</version>
  <description>ROB6 Lab assignment Base</description>

  <maintainer email="slaurs24@student.aau.dk">Soren</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS 2 dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>ament_index_cpp</depend>
  <depend>interfaces</depend>

  <!-- System dependencies -->
  <exec_depend>libglfw3</exec_depend>
  <exec_depend>libopengl0</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
